--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.7.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "mongoose": "^8.5.1",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
