--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^1.7.2",
+        "cron": "^3.1.7",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "mongoose": "^8.5.1",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "winston": "^3.13.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
