--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cron": "^3.1.7",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "express-winston": "^4.2.0",
         "mongoose": "^8.5.1",
         "ts-node": "^10.9.2",
         "winston": "^3.13.1"
